--- a/categories.html
+++ b/categories.html
@@ -17,7 +17,7 @@
   <body>
     <nav class="site-header sticky-top py-1 bg-dark">
       <div class="container d-flex flex-column flex-md-row justify-content-between">
-        <a class="py-2 d-none d-md-inline-block" href="index.html">Inicio</a>
+        <a class="py-2 d-none d-md-inline-block" href="home.html">Inicio</a>
         <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
         <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
         <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
@@ -58,6 +58,7 @@
                     <div class="col">
                       <input class="form-control" type="number" placeholder="máx." id="rangeFilterCountMax">
                     </div>
+                    
                     <div class="col-3 p-0">
                       <div class="btn-group" role="group">
                         <button class="btn btn-light btn-block" id="rangeFilterCount">Filtrar</button>
