--- a/products.html
+++ b/products.html
@@ -12,23 +12,29 @@
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
+    <link href="C:\Users\Vicky\Desktop\Jap_Project\js\products.js" rel="stylesheet">
   </head>
   <body>
+    <!-- barra de navegación -->
     <nav class="site-header sticky-top py-1 bg-dark">
       <div class="container d-flex flex-column flex-md-row justify-content-between">
-        <a class="py-2 d-none d-md-inline-block" href="index.html">Inicio</a>
+        <a class="py-2 d-none d-md-inline-block" href="home.html">Inicio</a>
         <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
         <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
         <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
         <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
       </div>
     </nav>
+    <!-- contenido -->
     <div class="container p-5">
-      <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
-        <h4 class="alert-heading">¡A trabajar! :)</h4>
-        <p>Esta sección corresponde a: Entrega 1 (Fecha de entrega: 22/08/2021) y Entrega 2 (Fecha de entrega: 05/09/2021).</p>
+      <h2 style= "text-align: center; font-weight: 900";>Los mejores productos en e-commerce </h2>
+      <br>
+        <div id="productos">
+          <h3 class= productName></h3>
+          <p id="productDescription"></p>
+        </div>
         <hr>
-        <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.</p>
+        
       </div>
     </div>
     <footer class="text-muted bg-light">
@@ -36,6 +42,7 @@
         <p class="float-right">
           <a href="#">Volver arriba</a>
         </p>
+        <!-- pie de página -->
         <p>Este sitio forma parte de Desarrollo Web - JAP - 2020</p>
         <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
       </div>
