--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 </head>
 
 <body class="text-center">
-  <div id="logback" class="container p-5">
+  <div class="container">
     <img src="img/login.png">
   <br>
-    <div class="bg-light mb-3";>
+    <div>
       <div>
         <h2>¡Nos alegra volver a verte!</h2>
       </div>
