--- a/cart.html
+++ b/cart.html
@@ -40,16 +40,46 @@
       <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
       <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
       <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
-      <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
-    </div>
+      <a  id="perfil" class="nav-link dropdown-toggle btn btn-outline-info" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+        </a>
+        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <li><a class="dropdown-item" href="cart.html">Mi carrito</a></li>
+          <li><a class="dropdown-item" href="my-profile.html">Mi perfil</a></li>
+          <li><hr class="dropdown-divider"></li>
+          <li><a class="dropdown-item" href="index.html" onclick="logoff()">Cerrar sesion</a></li>
+        </ul>
+       </div>
   </nav>
-  <div class="container p-5">
-    <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
-      <h4 class="alert-heading">¡A trabajar! :)</h4>
-      <p>Esta sección corresponde a: Entrega 5 (Fecha de entrega: 17/10/2021) y Entrega 7 (Fecha de entrega: 14/11/2021).</p>
-      <hr>
-      <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.</p>
-    </div>
+  <!-- contenido -->
+  <div class="container" style="padding-top: 2cm;">
+    <h2>Su carrito</h2>
+  <div id="wantedItems"></div>
+  <p style="font-weight:bolder;">Total </p>
+<div id="total"></div>
+
+    <br>
+  <div>
+<h5>Ingrese la dirección de envio</h5>
+<br>
+<form action="">
+  <div class="flex-column">
+ <p>Calle <input type="text" required></p> 
+ <p>Dirección <input type="text" required></p> 
+ <p>Esquina <input type="text" required></p> 
+</div>
+<br>
+<h5>Seleccione su forma de envio</h5>
+
+  <input checked="checked" name="envio" type="radio" value="premium" />  Premium (2-5 días) - Costo del 15% sobre el subtotal
+  <br>
+   <input name="envio" type="radio" value="express" /> Express (5-8 días) - Costo del 7% sobre el subtotal
+   <br>
+   <input name="envio" type="radio" value="standard"/> Standard (12 a 15 días) - Costo del 5% sobre el subtotal.
+  </div>
+   <br>
+   <button type="submit" class="btn btn-primary">Continuar con la Compra</button> 
+  </form>
+
   </div>
   <div id="spinner-wrapper">
     <div class="lds-ring">
@@ -64,6 +94,8 @@
   <script src="js/dropzone.js"></script>
   <script src="js/init.js"></script>
   <script src="js/cart.js"></script>
+  <script src="js/login.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 </body>
 
 </html>
